tests/ui/error-codes/E0565.stderr
error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/E0565.rs:2:1
   |
LL | #[repr("C")]
   | ^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
